--- a/index.html
+++ b/index.html
@@ -1,31 +1,4 @@
-<html>
-
-<head>
-    <link rel="stylesheet" type="text/css" href="style.css">
-</head>
-
-<body class="body_backgorund">
-
-    <div align="center">
-        <h1>Paint</h1>
-
-        <canvas id="myCanvas" width="800" height="400"></canvas>
-        <br><br>
-
-        <!--Additional activity -->
-        <span>Radius - </span>
-        <input type="text" id="radius" value=20>
-
-        <span>Color - </span>
-        <input type="text" id="color" value="Red">
-
-        <span>Width Of the line - </span>
-        <input type="text" id="width_of_line" value="2">
-        <br />
-        <button onclick="clearArea();">Clear Area</button>
-
-    </div>
-    <script src="main.js"></script>
-</body>
-
-</html>
+<!DOCTYPE html> <html> <head> <title>Guess The Word</title> <meta name="viewport" content="width=device-width, initial-scale=1"> <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/css/bootstrap.min.css"> <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"> <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/js/bootstrap.min.js"> <link rel="stylesheet" type="text/css" href="game.css"> <script src="game_login.js"> </head> <body>
+    <center> <h1>Game</h1> <div class="col-lg-4 col-sm-8 col-xs-11 login_div1"> <h3 >Player 1 Login for the game</h3> <label >User Name:</label> <input type="text" id="player1_name_input" class="form-control" placeholder="Player 1 Name"> <br> </div> <br> <div class="col-lg-4 col-sm-8 col-xs-11 login_div2"> <h3 >Player 2 Login for the game</h3> <label >User Name:</label> <input type="text" id="player2_name_input" class="form-control" placeholder="Player 2 Name"> <br> </div> <br> <button style="width:30%" class="btn btn-primary" onclick="addUser()">Log in</button> </center> 
+    </body> 
+    </html>
